--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
   --secundary-blue: #1a9af7;
   --soft-blue: #e7f5ff;
   --warm-black: #201e1c;
-  --warm-black-1: #282623;
+  --warm-black-1: #282623;  
   --grey: #bababa;
   --off-white: #faf8f7;
   --white: #ffffff;
@@ -110,7 +110,6 @@ main {
   height: auto;
   background-color: var(--off-white);
   padding-top: 80px;
-  padding-bottom: 30px;
   text-align: center;
 }
 
@@ -161,6 +160,7 @@ main {
 }
 
 .main-currency-table .currency-table--title {
+  display: inline-block;
   margin-bottom: 10px;
   font-size: 1.8rem;
   font-weight: bold;
@@ -254,4 +254,272 @@ main {
 
 .main-currency-table:last-of-type div.currency-table--date{
   background-color: var(--soft-blue);
+}
+
+.main-product-detail {
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color:var(--warm-black);
+}
+
+.product-detail--batata-logo{
+  position: absolute;
+  width: 40px;
+  height: 25px;
+  top: -12px;
+  left: calc(50% - 20px);
+  background-image: url('../assets/icons/batata.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  
+}
+.product-detail--title {
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+
+.product-detail--title h2{
+  margin-bottom: 20px;
+  font-size: 2.4rem;
+  color: var(--white);
+  font-weight: bold;
+  line-height: 2.6rem;
+}
+
+.product-detail--title p {
+  margin-bottom: 20px;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: 500;
+  color: #808080;
+}
+
+.product-detail--card{
+  width: 90%;
+  min-width: 288px;
+  max-width: 400px;
+  min-height: 160px;
+  height: auto;
+  margin: 15px auto;
+  padding: 15px;
+  background-color: var(--warm-black-1);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 4px;
+  text-align: left;
+}
+
+.clock-icon{
+  background-image: url('../assets/icons/Clock-icon.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.eye-icon{
+  background-image: url('../assets/icons/Eye-icon.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.money-icon{
+  background-image: url('../assets/icons/Dollar-icon.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.check-icon{
+  background-image: url('../assets/icons/Chech-icon.svg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.card--icon-container{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 10px;
+}
+
+.product--card-title{
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: var(--off-white);
+}
+
+.product--card-body{
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #808080;
+}
+
+.bitcoin-img-container{
+  width: 100%;
+  min-height: 320px;
+  height: 50vh;
+  background-image: url('../assets/images/bitcoinbaby-2x.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.bitcoin-img-container h2{
+  padding-top: 60px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--white);
+}
+
+.main-plans--container{
+  width: 100%;
+  min-height: 320px;
+  padding-bottom: 70px;
+}
+
+.main-plans--container .plans--title {
+  width: 90%;
+  min-width: 288px;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.plans--title h2{
+  padding-top: 50px;
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--warm-black);
+}
+
+.plans--title p {
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: #757575;
+}
+
+/** TARJETAS **/
+
+.plans-container--slider{
+  display: flex;
+  height: 360px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
+}
+
+.plans-container--card {
+  position: relative;
+  scroll-snap-align: center;
+  width: 70%;
+  min-width: 190px;
+  max-width: 300px;
+  height: 250px;
+  margin: 50px 5px 0;
+  padding: 0 15px;
+  background-color: var(--white);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(89, 73, 30, 0.16);
+}
+
+.recomendado {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  top: -15px;
+  left: calc(50% - 60px);
+  background-color: var(--bitcoin-orange);
+  border-radius: 8px;
+  color: var(--white);
+  font-size: 1.2rem;
+  padding: 7px;
+}
+
+.plan-card-title{
+  padding-top: 30px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.4rem;
+  color: black;
+}
+
+.plan-card--price{
+  position: relative;
+  padding: 5px 0;
+  font-size: 5.2rem;
+  font-weight: bold;
+  color: black;
+}
+.plan-card--price span{
+  position: absolute;
+  top: 24px;
+  left: 36px;
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.plan-card--saving{
+  font-size: 1.2rem;
+  color: #757575;
+}
+
+.plan-card--ca{
+  width: 150px;
+  height: 48px;
+  margin-top: 20px;
+  background-color: var(--off-white);
+  border: 2px solid var(--bitcoin-orange);
+  border-radius: 5px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  font-family: "DM Sans", sans-serif;
+  line-height: 1.8rem;
+  color: var(--warm-black);
+}
+
+.plan-card--ca span{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url('../assets/icons/arrow-right.svg');
+  vertical-align: text-bottom;
+}
+
+footer{
+  display: flex;
+  width: 100%;
+  height: 150px;
+  background-color: var(--bitcoin-orange);
+}
+
+footer section{
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+footer section.left ul{
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  list-style: none;
+}
+footer section.left li{
+  margin: 10px 0;
+}
+
+footer section.left a{
+  text-decoration: none;
+  color: var(--white);
 }
